--- a/requirements.txt
+++ b/requirements.txt
@@ -74,6 +74,7 @@ opencv-python=4.4.0.44=pypi_0
 openssl=1.1.1h=haf1e3a3_0
 opt-einsum=3.3.0=pypi_0
 packaging=20.4=pypi_0
+pandas=1.1.3=pypi_0
 pandocfilters=1.4.2=pypi_0
 parso=0.7.1=pypi_0
 pexpect=4.8.0=pypi_0
@@ -93,6 +94,7 @@ pyrsistent=0.17.3=pypi_0
 python=3.8.5=h26836e1_1
 python-dateutil=2.8.1=pypi_0
 pytorch=1.6.0=py3.8_0
+pytz=2020.1=pypi_0
 pyyaml=5.3.1=pypi_0
 pyzmq=19.0.2=pypi_0
 readline=8.0=h1de35cc_0
