--- a/requirements.txt
+++ b/requirements.txt
@@ -1,129 +1,99 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-64
-absl-py=0.10.0=pypi_0
-appnope=0.1.0=pypi_0
-argon2-cffi=20.1.0=pypi_0
-astunparse=1.6.3=pypi_0
-async-generator=1.10=pypi_0
-attrs=20.2.0=pypi_0
-backcall=0.2.0=pypi_0
-blas=1.0=mkl
-bleach=3.2.1=pypi_0
-ca-certificates=2020.7.22=0
-cachetools=4.1.1=pypi_0
-certifi=2020.6.20=py38_0
-cffi=1.14.3=pypi_0
-chardet=3.0.4=pypi_0
-cycler=0.10.0=pypi_0
-decorator=4.4.2=pypi_0
-defusedxml=0.6.0=pypi_0
-entrypoints=0.3=pypi_0
-freetype=2.10.2=ha233b18_0
-gast=0.3.3=pypi_0
-google-auth=1.22.1=pypi_0
-google-auth-oauthlib=0.4.1=pypi_0
-google-pasta=0.2.0=pypi_0
-grpcio=1.32.0=pypi_0
-h5py=2.10.0=pypi_0
-idna=2.10=pypi_0
-imutils=0.5.3=pypi_0
-intel-openmp=2019.4=233
-ipykernel=5.3.4=pypi_0
-ipython=7.18.1=pypi_0
-ipython-genutils=0.2.0=pypi_0
-ipywidgets=7.5.1=pypi_0
-jedi=0.17.2=pypi_0
-jinja2=2.11.2=pypi_0
-jpeg=9b=he5867d9_2
-jsonschema=3.2.0=pypi_0
-jupyter-client=6.1.7=pypi_0
-jupyter-core=4.6.3=pypi_0
-jupyterlab-pygments=0.1.2=pypi_0
-keras=2.4.3=pypi_0
-keras-preprocessing=1.1.2=pypi_0
-kiwisolver=1.2.0=pypi_0
-lcms2=2.11=h92f6f08_0
-libcxx=10.0.0=1
-libedit=3.1.20191231=h1de35cc_1
-libffi=3.3=hb1e8313_2
-libpng=1.6.37=ha441bb4_0
-libtiff=4.1.0=hcb84e12_1
-lz4-c=1.9.2=h79c402e_3
-markdown=3.2.2=pypi_0
-markupsafe=1.1.1=pypi_0
-matplotlib=3.3.2=pypi_0
-mistune=0.8.4=pypi_0
-mkl=2019.4=233
-mkl-service=2.3.0=py38hfbe908c_0
-mkl_fft=1.2.0=py38hc64f4ea_0
-mkl_random=1.1.1=py38h959d312_0
-nbclient=0.5.0=pypi_0
-nbconvert=6.0.7=pypi_0
-nbformat=5.0.7=pypi_0
-ncurses=6.2=h0a44026_1
-nest-asyncio=1.4.1=pypi_0
-ninja=1.10.1=py38h879752b_0
-notebook=6.1.4=pypi_0
-numpy=1.18.5=pypi_0
-numpy-base=1.19.1=py38hcfb5961_0
-oauthlib=3.1.0=pypi_0
-olefile=0.46=py_0
-opencv-contrib-python=4.4.0.42=pypi_0
-opencv-python=4.4.0.44=pypi_0
-openssl=1.1.1h=haf1e3a3_0
-opt-einsum=3.3.0=pypi_0
-packaging=20.4=pypi_0
-pandas=1.1.3=pypi_0
-pandocfilters=1.4.2=pypi_0
-parso=0.7.1=pypi_0
-pexpect=4.8.0=pypi_0
-pickleshare=0.7.5=pypi_0
-pillow=7.2.0=py38ha54b6ba_0
-pip=20.2.3=py38_0
-prometheus-client=0.8.0=pypi_0
-prompt-toolkit=3.0.7=pypi_0
-protobuf=3.13.0=pypi_0
-ptyprocess=0.6.0=pypi_0
-pyasn1=0.4.8=pypi_0
-pyasn1-modules=0.2.8=pypi_0
-pycparser=2.20=pypi_0
-pygments=2.7.1=pypi_0
-pyparsing=2.4.7=pypi_0
-pyrsistent=0.17.3=pypi_0
-python=3.8.5=h26836e1_1
-python-dateutil=2.8.1=pypi_0
-pytorch=1.6.0=py3.8_0
-pytz=2020.1=pypi_0
-pyyaml=5.3.1=pypi_0
-pyzmq=19.0.2=pypi_0
-readline=8.0=h1de35cc_0
-requests=2.24.0=pypi_0
-requests-oauthlib=1.3.0=pypi_0
-rsa=4.6=pypi_0
-scipy=1.5.2=pypi_0
-send2trash=1.5.0=pypi_0
-setuptools=50.3.0=py38h0dc7051_1
-six=1.15.0=py_0
-sqlite=3.33.0=hffcf06c_0
-tensorboard=2.3.0=pypi_0
-tensorboard-plugin-wit=1.7.0=pypi_0
-tensorflow=2.3.1=pypi_0
-tensorflow-estimator=2.3.0=pypi_0
-termcolor=1.1.0=pypi_0
-terminado=0.9.1=pypi_0
-testpath=0.4.4=pypi_0
-tk=8.6.10=hb0a8c7a_0
-torchvision=0.7.0=py38_cpu
-tornado=6.0.4=pypi_0
-traitlets=5.0.4=pypi_0
-urllib3=1.25.10=pypi_0
-wcwidth=0.2.5=pypi_0
-webencodings=0.5.1=pypi_0
-werkzeug=1.0.1=pypi_0
-wheel=0.35.1=py_0
-widgetsnbextension=3.5.1=pypi_0
-wrapt=1.12.1=pypi_0
-xz=5.2.5=h1de35cc_0
-zlib=1.2.11=h1de35cc_3
-zstd=1.4.5=h41d2c2f_0
+absl-py==0.10.0
+appnope==0.1.0
+argon2-cffi==20.1.0
+astunparse==1.6.3
+async-generator==1.10
+attrs==20.2.0
+backcall==0.2.0
+bleach==3.2.1
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.3
+chardet==3.0.4
+cycler==0.10.0
+decorator==4.4.2
+defusedxml==0.6.0
+entrypoints==0.3
+gast==0.3.3
+google-auth==1.22.1
+google-auth-oauthlib==0.4.1
+google-pasta==0.2.0
+grpcio==1.32.0
+h5py==2.10.0
+idna==2.10
+imutils==0.5.3
+ipykernel==5.3.4
+ipython==7.18.1
+ipython-genutils==0.2.0
+ipywidgets==7.5.1
+jedi==0.17.2
+Jinja2==2.11.2
+jsonschema==3.2.0
+jupyter-client==6.1.7
+jupyter-core==4.6.3
+jupyterlab-pygments==0.1.2
+Keras==2.4.3
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.3.2
+mistune==0.8.4
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+nbclient==0.5.0
+nbconvert==6.0.7
+nbformat==5.0.7
+nest-asyncio==1.4.1
+notebook==6.1.4
+numpy @ file:///opt/concourse/worker/volumes/live/c646f6b9-b398-438d-7dc7-c7142e0ba44b/volume/numpy_and_numpy_base_1596235504536/work
+oauthlib==3.1.0
+olefile==0.46
+opencv-contrib-python==4.4.0.42
+opencv-python==4.4.0.44
+opt-einsum==3.3.0
+packaging==20.4
+pandas==1.1.3
+pandocfilters==1.4.2
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow @ file:///opt/concourse/worker/volumes/live/be1e8a56-c4be-4ffe-4fa7-5a0e9c460b1a/volume/pillow_1594307312933/work
+prometheus-client==0.8.0
+prompt-toolkit==3.0.7
+protobuf==3.13.0
+ptyprocess==0.6.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
+Pygments==2.7.1
+pyparsing==2.4.7
+pyrsistent==0.17.3
+python-dateutil==2.8.1
+pytz==2020.1
+PyYAML==5.3.1
+pyzmq==19.0.2
+requests==2.24.0
+requests-oauthlib==1.3.0
+rsa==4.6
+scipy==1.5.2
+Send2Trash==1.5.0
+six==1.15.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
+termcolor==1.1.0
+terminado==0.9.1
+testpath==0.4.4
+torch==1.6.0
+torchvision==0.7.0
+tornado==6.0.4
+traitlets==5.0.4
+urllib3==1.25.10
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==1.0.1
+widgetsnbextension==3.5.1
+wrapt==1.12.1
