--- a/requirements.txt
+++ b/requirements.txt
@@ -88,7 +88,10 @@ rsa==4.6
 scipy==1.5.2
 Send2Trash==1.5.0
 six==1.15.0
-snowballstemmer==2.0.0
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
 termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
